# DeepSparse

./: README.MD
DistributedMemory/HPX/lanczos/: main.cpp
DistributedMemory/HPX/power_iteration/: CMakeLists.txt  main.cpp
DistributedMemory/MPI/lanczos/: custom_lanczos.cpp  makefile  mkl_lanczos.cpp
DistributedMemory/MPI/power_iteration/: custom_power_iteration.cpp  makefile  mkl_power_iteration.cpp
GPU/: README.MD
GPU/DeepSparse_OpenMP_MemoryManager/: README.MD
GPU/DeepSparse_OpenMP_MemoryManager/inc/: matrix_ops_gpu.h  memory_manager.h  util.h
GPU/DeepSparse_OpenMP_MemoryManager/makefiles/: Makefile
GPU/DeepSparse_OpenMP_MemoryManager/scripts/: build-on-corigpu.sh
GPU/DeepSparse_OpenMP_MemoryManager/src/: lobpcg_gpu_mm.cpp  matrix_ops_cpu.cpp  matrix_ops_gpu.cpp  memory_manager.cpp  util.cpp
SharedMemory/DeepSparse/: SConstruct  config.py
SharedMemory/DeepSparse/common/: matrix_ops.cpp  matrix_ops.h  vector_ops.cpp
SharedMemory/HPX/lobpcg/: CMakeLists.txt  kernels.cpp  kernels.h  main.cpp  utils.cpp  utils.h
src/: .sconsign.dblite  dgraph.cpp  entire_small_graph.txt  inline1_64k_2k_part4096_nonloop_partinfo.txt  inline1_64k_2k_part4096_nonloop_taskinfo.txt  matA_0k_0k_part4096_firstloop_taskinfo.txt  matA_0k_0k_part4096_nonloop_partinfo.txt  matA_0k_0k_part4096_nonloop_taskinfo.txt  matA_0k_0k_part4096_secondloop_taskinfo.txt  out_edge_part_small_graph.txt  part_topsort.txt  refined_graph_partition.txt
src/common/: exec_util.cpp  exec_util.h  matrix_ops.cpp  matrix_ops.h  util.cpp  util.h  vector_ops.cpp  vector_ops.h
(+203 files in other folders)
